// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProgressHeader > Snapshots > matches snapshot for finalizing state 1`] = `
<div>
  <div
    aria-label="Progress indicators"
    class="px-6 py-4 border-b border-gray-200 shadow-xs"
    role="group"
  >
    <div
      class="flex items-center gap-2 mb-2"
    >
      <h3
        class="text-sm font-semibold"
      >
        Finalizing
      </h3>
    </div>
    <div
      aria-label="7 of 7 spaces complete"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      aria-valuetext="100%"
      class="flex flex-col gap-2 w-full"
      id="react-aria-_r_11_"
      role="progressbar"
    >
      <div
        class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
      >
        <div
          class="h-full bg-primary rounded-full transition-transform !duration-500"
          style="transform: translateX(-100%);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ProgressHeader > Snapshots > matches snapshot for initial state 1`] = `
<div>
  <div
    aria-label="Progress indicators"
    class="px-6 py-4 border-b border-gray-200 shadow-xs"
    role="group"
  >
    <div
      class="flex items-center gap-2 mb-2"
    >
      <h3
        class="text-sm font-semibold"
      >
        Initializing
      </h3>
    </div>
    <div
      aria-label="0 of 7 spaces complete"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      aria-valuetext="0%"
      class="flex flex-col gap-2 w-full"
      id="react-aria-_r_r_"
      role="progressbar"
    >
      <div
        class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
      >
        <div
          class="h-full bg-primary rounded-full transition-transform !duration-500"
          style="transform: translateX(-100%);"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ProgressHeader > Snapshots > matches snapshot for updated state with completed spaces 1`] = `
<div>
  <div
    aria-label="Progress indicators"
    class="px-6 py-4 border-b border-gray-200 shadow-xs"
    role="group"
  >
    <div
      class="flex items-center gap-2 mb-2"
    >
      <h3
        class="text-sm font-semibold"
      >
        Initializing
      </h3>
    </div>
    <div
      aria-label="2 of 7 spaces complete"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="28.57142857142857"
      aria-valuetext="29%"
      class="flex flex-col gap-2 w-full"
      id="react-aria-_r_u_"
      role="progressbar"
    >
      <div
        class="z-0 relative bg-default-300/50 overflow-hidden rtl:rotate-180 h-3 rounded-full"
      >
        <div
          class="h-full bg-primary rounded-full transition-transform !duration-500"
          style="transform: translateX(-100%);"
        />
      </div>
    </div>
  </div>
</div>
`;
